@@ -88,6 +88,10 @@
       <pathelement path="${gs.dir}/resources"/>
     </path>
 
+    <!-- extract relative jvm path, e.g. jdk1.8.0_73.jdk/Contents/Home -->
+    <propertyregex property="java.local" input="${env.JAVA_HOME}"
+      regexp=".*/([^/]*/[^/]*/[^/]*)" select="\1"/>
+
     <bundleapp 
         classpathref="gs.app.classpath"
         outputdirectory="${app.dir}"
@@ -109,6 +113,14 @@
       <option value="-Xms128m"/>
       <option value="-Xmx512m"/>
       <option value="-Dapple.laf.useScreenMenuBar=true"/>
+
+      <!-- Work around conflict with local JAI extensions installed in ~/Library/Java/Extensions -->
+      <!-- (system extension  MRJToolkit used by launcher to open the default browser) -->
+      <option value="-Djava.ext.dirs=$APP_ROOT/Contents/PlugIns/${java.local}/jre/lib/ext:/System/Library/Java/Extensions"/>
+      
+      <!-- enable marlin renderer -->
+      <option value="-Xbootclasspath/a:$APP_ROOT/Contents/Java/webapps/geoserver/WEB-INF/lib/${marlin_jar}"/>
+      <option value="-Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine"/>
 
       <!-- Workaround since the icon parameter for bundleapp doesn't work -->
       <option value="-Xdock:icon=Contents/Resources/GeoServer.icns"/>
